--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Examples</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.js"></script>
+    	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.0/ui-bootstrap.min.js"></script>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
 	</head>
@@ -13,27 +14,27 @@
 			<div class="panel panel-primary" style="margin: 0;position: absolute;height: 100%;width: 100%;">
 				<div class="panel-heading">
 					<div class="row">
-						<h4 class="col-md-8">My Examples</h4>
-						<div class="col-md-4" style="text-align:right;">
+						<h4 class="col-md-8 col-sm-8">My Examples</h4>
+						<div class="col-md-4 col-sm-4" style="text-align:right;">
 							<a class="btn btn-link" style="color:white;font-size:18px;" target="_blank" ng-href="http://sathishgajendran.github.io">About Me</a>
 						</div>
 					</div>
 				</div>
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-md-2" style="border: 1px solid whitesmoke;border-radius: 5px;">
+						<div class="col-md-2 col-sm-2" style="border: 1px solid whitesmoke;border-radius: 5px;">
 							<ul class="list-group">
-								<li ng-repeat="data in dataList" class="list-group-item" ng-click="liElClick($event,data)">
+								<li ng-repeat="(key,url) in links" class="list-group-item" ng-click="liElClick($event,key)">
 									<div class="row">
-										<div class="col-md-10">{{data.name}}</div>
-										<a target="_blank" ng-href="{{data.link}}">
+										<div class="col-md-10 col-sm-10">{{key}}</div>
+										<a target="_blank" ng-href="{{url}}">
 											<span class="glyphicon glyphicon-new-window"></span>
 										</a>
 									</div>
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-10" style="border: 1px solid whitesmoke;border-radius: 5px;padding:0;">
+						<div class="col-md-10 col-sm-10" style="border: 1px solid whitesmoke;border-radius: 5px;padding:0;">
 							<div id="disLoad">Loading...</div>
 							<div id="display" class="hide">
 								<iframe id="disArea" style="width: 100%;height: 550px;border:0;"></iframe>
